--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-  <% include ../partials/header.ejs %>
+  <meta name="viewport" content="width=device-width, initial-scale=1", http-equiv="Content-Type" content="text/html"; charset="UTF-8">
+  <link rel="stylesheet" href="css/font-awesome.min_1.css">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize1.css">
+  <link rel="stylesheet prefetch" href="css/screen.css">
+  <script src="js/modernizr.js" type="text/javascript"></script>
+  <title>Star Clothes</title>
 </head>
-
 <body>
   <header class="container">
     <nav class="head-t">
@@ -75,6 +80,9 @@
     <h3>New arrivals</h3>
     <ul id="gallery-items" class="container1"></ul>
   </section>
+  <!--<main>
+      <ul id="gallery-items" class="container"></ul>
+  </main>-->
 
   <section class="brands">
     <h3>Brands</h3>
@@ -94,28 +102,41 @@
     </div>
     <div class="col-6-n">
       <img src="img/bag.jpg" alt="">
+      <!--<div class="karusel">
+        <img src="img/bag.jpg" alt="A placeholder image">
+        <img src="img/1a.jpg" alt="A placeholder image">
+        <img src="img/1b.jpg" alt="A placeholder image">
+        <div class="wrapper1" id="wrapper1"></div>
+        <div class="control_wrapper1">
+            <div class="prev_arrow1" id="prev1"></div>
+            <div class="next_arrow1" id="next1"></div>
+        </div>
+      </div>-->
     </div>
   </section>
 
   <section class="news">
     <h3>News</h3>
+    <!--<div class="container">
+
+    </div>-->
     <ul class="news-n">
       <li>
         <article class="n-clearfix">
           <div class="p1">
 
           </div>
-          <img src="img/m1.jpg" alt="">
+  				<img src="img/m1.jpg" alt="">
           <ul>
             <li><a href="#" class="stone">Stone Clad</a></li>
             <li><a href="#" class="date">27.01.2017</a></li>
           </ul>
           <h4>WE ADDED MANY THINGS YOU MAY LIKE</h4>
-          <p>It is a long established fact that a reader will be distracted.</p>
+  				<p>It is a long established fact that a reader will be distracted.</p>
           <form>
             <input type="submit" value="Learn more" class="learn">
           </form>
-        </article>
+  			</article>
       </li>
       <li>
         <article class="n-clearfix">
@@ -210,8 +231,8 @@
         <h5>Stay Connected</h5>
         <ul class="socialn">
           <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
-          <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-          <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+    			<li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+    			<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
           <li><i class="fa fa-rss" aria-hidden="true"></i></li>
         </ul>
         <h5>Subscribe in our News Letter</h5>
@@ -234,8 +255,9 @@
     </div>
   </figcaption>
   <a href="#"><i class="add"></i></a>
-  </figure>
-  </script>
+</figure>
+
+</script>
 
     <script type="text/javascript" src="js/menu.js">  </script>
     <script src="js/jquery.min.js"></script>
