--- a/public/index.html
+++ b/public/index.html
@@ -247,6 +247,33 @@
   <script id="productTemplate" type="text/template">
     <figure class="product">
         <img />
+        <div class="button">
+         <div class="number">
+           <table>
+             <tr>
+               <td>Size</td>
+               <td>1</td>
+               <td>2</td>
+               <td>3</td>
+               <td>4</td>
+             </tr>
+           </table>
+           <!--<ul class="size">
+             <li><h4>Size</h4></li>
+             <li>
+               <ul class="size1">
+                 <li><a href="#">1</a></li>
+                 <li><a href="#">2</a></li>
+                 <li><a href="#">3</a></li>
+                 <li><a href="#">4</a></li>
+               </ul>
+             </li>
+           </ul>-->
+         </div>
+         <a class="addtocart">
+           <div class="add">Buy</div>
+         </a>
+     </div>
     </div>
     <figcaption>
     <h3></h3>
