--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
 
   <section id="carusel" class="carusel">
     <img src="img/img1.jpg" alt="A placeholder image">
-    <img src="img/1a.jpg" alt="A placeholder image">
-    <img src="img/1b.jpg" alt="A placeholder image">
+    <img src="img/img2.jpg" alt="A placeholder image">
+    <img src="img/img3.jpg" alt="A placeholder image">
     <div class="wrapper" id="wrapper">
     </div>
     <div class="control_wrapper">
